--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -353,7 +353,7 @@
     <set>QDockWidget::AllDockWidgetFeatures</set>
    </property>
    <property name="windowTitle">
-    <string>Serial Port</string>
+    <string>GCode Viewer</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -1204,7 +1204,7 @@
    </property>
    <property name="toolTip">
     <string>Start</string>
-    </property>
+   </property>
   </action>
   <action name="actionSaveClassics">
    <property name="text">
