--- a/qml.qrc
+++ b/qml.qrc
@@ -55,6 +55,9 @@
         <file>images/icon-undo.png</file>
         <file>images/icon-redo.png</file>
         <file>images/icon-pathoffset.png</file>
+        <file>images/icon-crop.png</file>
+        <file>images/icon-invert.png</file>
+        <file>images/icon-sharpen.png</file>
         <file>images/icon-trace.png</file>
         <file>images/icon-preview.png</file>
         <file>images/icon-start.png</file>
@@ -113,6 +116,9 @@
         <file>images/dark/icon-undo.png</file>
         <file>images/dark/icon-redo.png</file>
         <file>images/dark/icon-pathoffset.png</file>
+        <file>images/dark/icon-crop.png</file>
+        <file>images/dark/icon-invert.png</file>
+        <file>images/dark/icon-sharpen.png</file>
         <file>images/dark/icon-trace.png</file>
         <file>images/dark/icon-preview.png</file>
         <file>images/dark/icon-start.png</file>
