--- a/src/widgets/panels/transform-panel.ui
+++ b/src/widgets/panels/transform-panel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>265</width>
+    <width>287</width>
     <height>82</height>
    </rect>
   </property>
@@ -290,6 +290,9 @@
        <property name="icon">
         <iconset resource="../../../qml.qrc">
          <normaloff>:/images/icon-lock.png</normaloff>:/images/icon-lock.png</iconset>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
