--- a/src/widgets/panels/image-panel.ui
+++ b/src/widgets/panels/image-panel.ui
@@ -54,6 +54,9 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="minimum">
+         <number>1</number>
+        </property>
         <property name="maximum">
          <number>255</number>
         </property>
