Add minus icon and fix scale block position bug

--- a/qml.qrc
+++ b/qml.qrc
@@ -45,6 +45,7 @@
         <file>images/icon-nodetype-1.png</file>
         <file>images/icon-setting.png</file>
         <file>images/icon-alignvbottom.png</file>
+        <file>images/icon-minus.png</file>
         <file>images/icon-plus.png</file>
         <file>images/icon-bold.png</file>
         <file>images/icon-I.png</file>
@@ -106,6 +107,7 @@
         <file>images/dark/icon-nodetype-1.png</file>
         <file>images/dark/icon-setting.png</file>
         <file>images/dark/icon-alignvbottom.png</file>
+        <file>images/dark/icon-minus.png</file>
         <file>images/dark/icon-plus.png</file>
         <file>images/dark/icon-bold.png</file>
         <file>images/dark/icon-I.png</file>
