--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Vecty</string>
+   <string>Swiftray</string>
   </property>
   <property name="windowIcon">
    <iconset>
