--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -349,7 +349,7 @@
   </widget>
   <widget class="QDockWidget" name="serialPortDock">
    <property name="features">
-    <set>QDockWidget::AllDockWidgetFeatures</set>
+    <set>QDockWidget::DockWidgetClosable|QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="windowTitle">
     <string>GCode Viewer</string>
