Feature/add about window (#249)
* Add about window in testing

* Update about UI wait swiftray text

* Add about icon

* add image for dark mode

* Turing UI

* Change line hight of text

--- a/qml.qrc
+++ b/qml.qrc
@@ -147,5 +147,7 @@
         <file>qtquickcontrols2.conf</file>
         <file>essentialUI.ini</file>
         <file>classicUI.ini</file>
+        <file>images/icon-about.png</file>
+        <file>images/dark/icon-about.png</file>
     </qresource>
 </RCC>
