Feature/add exmaple for user (#251)
* Add example for swiftray

* Add translation for example

* Update example to qml

Co-authored-by: Jau-Shiuan(Jason) Shiao <b01901105@ntu.edu.tw>

--- a/qml.qrc
+++ b/qml.qrc
@@ -147,6 +147,9 @@
         <file>qtquickcontrols2.conf</file>
         <file>essentialUI.ini</file>
         <file>classicUI.ini</file>
+        <file>resources/example/Example-of-swiftray.bb</file>
+        <file>resources/example/Material-Cutting-Test.bb</file>
+        <file>resources/example/Material-Engraving-Test.bb</file>
         <file>images/icon-about.png</file>
         <file>images/dark/icon-about.png</file>
     </qresource>
