--- a/src/widgets/panels/layer-params-panel.ui
+++ b/src/widgets/panels/layer-params-panel.ui
@@ -149,21 +149,27 @@
           </widget>
          </item>
          <item>
-          <widget class="QSpinBox" name="powerSpinBox">
-           <property name="enabled">
-            <bool>true</bool>
-           </property>
+          <widget class="QDoubleSpinBox" name="powerSpinBox">
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+           <property name="prefix">
+            <string/>
            </property>
            <property name="suffix">
             <string> %</string>
            </property>
+           <property name="decimals">
+            <number>1</number>
+           </property>
            <property name="maximum">
-            <number>100</number>
+            <double>100.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>0.100000000000000</double>
            </property>
            <property name="value">
-            <number>25</number>
+            <double>25.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -179,18 +185,24 @@
           </widget>
          </item>
          <item>
-          <widget class="QSpinBox" name="speedSpinBox">
+          <widget class="QDoubleSpinBox" name="speedSpinBox">
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
            <property name="suffix">
             <string> mm/s</string>
            </property>
+           <property name="decimals">
+            <number>1</number>
+           </property>
            <property name="maximum">
-            <number>300</number>
+            <double>300.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>0.100000000000000</double>
            </property>
            <property name="value">
-            <number>300</number>
+            <double>300.000000000000000</double>
            </property>
           </widget>
          </item>
