--- a/src/windows/gcode-panel.ui
+++ b/src/windows/gcode-panel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GCodePlayer</class>
- <widget class="QFrame" name="GCodePlayer">
+ <class>GCodePanel</class>
+ <widget class="QFrame" name="GCodePanel">
   <property name="geometry">
    <rect>
     <x>0</x>
