--- a/src/widgets/panels/jogging-panel.ui
+++ b/src/widgets/panels/jogging-panel.ui
@@ -328,6 +328,9 @@
            <property name="singleStep">
             <double>0.100000000000000</double>
            </property>
+           <property name="value">
+            <double>30.000000000000000</double>
+           </property>
           </widget>
          </item>
          <item row="1" column="2">
@@ -366,6 +369,9 @@
            </property>
            <property name="singleStep">
             <double>0.100000000000000</double>
+           </property>
+           <property name="value">
+            <double>2.000000000000000</double>
            </property>
           </widget>
          </item>
