--- a/src/widgets/panels/jogging-panel.ui
+++ b/src/widgets/panels/jogging-panel.ui
@@ -234,6 +234,9 @@
            <property name="decimals">
             <number>1</number>
            </property>
+           <property name="maximum">
+            <double>999999.000000000000000</double>
+           </property>
           </widget>
          </item>
          <item row="0" column="2">
@@ -275,6 +278,9 @@
            </property>
            <property name="decimals">
             <number>1</number>
+           </property>
+           <property name="maximum">
+            <double>999999.000000000000000</double>
            </property>
           </widget>
          </item>
