--- a/src/widgets/panels/jogging-panel.ui
+++ b/src/widgets/panels/jogging-panel.ui
@@ -379,6 +379,9 @@
            <property name="decimals">
             <number>1</number>
            </property>
+           <property name="maximum">
+            <double>10.000000000000000</double>
+           </property>
            <property name="singleStep">
             <double>0.100000000000000</double>
            </property>
